--- a/config/config.yml
+++ b/config/config.yml
@@ -13,6 +13,11 @@ postgres:
   dbname: "flamingo_db"
   sslmode: "disable"
 
-
 db:
-  dsn: "postgres://postgres:postgres@localhost:5432/products?sslmode=disable"
+  driver: "postgres"
+  host: "localhost"
+  port: 5432
+  username: "agoAdmin"
+  password: "root@123"
+  database: "ago"
+  sslmode: "disable"
